Implement OAuth2 authentication flow and add tests for FastMCP server
- Added `auth_utils.py` to handle OAuth2 authentication, including a listener for authorization code callbacks and functions to start the authentication flow and setup credentials.
- Introduced `require_auth` decorator to enforce authentication on functions.
- Created `test_tools.py` to test the FastMCP server instantiation and tool functionality, ensuring the server responds correctly to tool calls.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
  "beautifulsoup4>=4.12.3",
+ "fastmcp>=2.10.3",
  "google-api-python-client>=2.154.0",
  "httplib2>=0.22.0",
- "mcp>=1.3.0",
  "oauth2client==4.1.3",
  "python-dotenv>=1.0.1",
  "pytz>=2024.2",
@@ -25,7 +25,12 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "pyright>=1.1.389",
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.0.0",
 ]
 
 [project.scripts]
 mcp-gsuite = "mcp_gsuite.__main__:main"
+
+[pytest]
+required_plugins=["asyncio"]
