--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = [
 
 [project.scripts]
 mcp-gsuite = "mcp_gsuite.__main__:main"
+mcp-gsuite-docs = "mcp_gsuite.utils.update_docs:update_dev_docs"
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
